--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "pico-joybus-comms"]
-	path = pico-joybus-comms
-	url = https://github.com/JulienBernard3383279/pico-joybus-comms.git
+[submodule "lib/joybus-pio"]
+	path = lib/joybus-pio
+	url = git@github.com:JonnyHaystack/joybus-pio.git
