--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,12 +25,12 @@ else()
 endif()
 
 add_compile_definitions(
-    GC_DATA_PIN=${GC_DATA_PIN}
+    GC_DATA_PIN=$ENV{GC_DATA_PIN}
 )
 
-if (DEFINED ENV{GC_3V3_PIN})
+if (DEFINED $ENV{GC_3V3_PIN})
     add_compile_definitions(
-        GC_3V3_PIN=${GC_3V3_PIN}
+        GC_3V3_PIN=$ENV{GC_3V3_PIN}
     )
 endif ()
 
