ci: add GitHub Actions workflow (#1)
* ci: add GitHub Actions workflow
* ci: fix PICO_SDK_PATH
* ci: clone pico-sdk submodules
* build: set GC_3V3_PIN macro only if env var set
* build: try to fix CMakeLists stuff
* ci: update actions/upload-artifact

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,16 @@ else()
     message("Git not found or not a git repo")
 endif()
 
+add_compile_definitions(
+    GC_DATA_PIN=$ENV{GC_DATA_PIN}
+)
+
+if (DEFINED $ENV{GC_3V3_PIN})
+    add_compile_definitions(
+        GC_3V3_PIN=$ENV{GC_3V3_PIN}
+    )
+endif ()
+
 include_directories(
     include
     lib/joybus-pio/include
