--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,7 @@
         "GC_DATA_PIN": "0",
         "GC_3V3_PIN": "1"
     },
-    "onCreateCommand": "git clone --recursive https://github.com/raspberrypi/pico-sdk ~/pico-sdk",
+    "onCreateCommand": "git clone --recursive --depth 1 --branch 1.5.1 https://github.com/raspberrypi/pico-sdk ~/pico-sdk",
     "customizations": {
         "vscode": {
             "settings": {
